# SEA-ME-ADS

./: .gitignore  README.md  lane_follow.launch.py  lanedetection.launch  main.launch.py
src/Brain/: main.py
src/Brain/src/ADS/: auto_control_example.py  cmd_vel_bridge.py  joy_legacy_bridge.py
src/Brain/src/dashboard/frontend/.angular/cache/18.2.9/dashboard/: .tsbuildinfo
src/Brain/src/dashboard/frontend/src/app/cluster/time-speed-steer/: time-speed-steer.component.ts
src/Brain/src/hardware/serialhandler/threads/: threadWrite.py
src/Brain/src/utils/messages/: messageHandlerSender.py
src/Params/: Camera.yaml  CameraIPM.py  Car.yaml  Control.yaml  ParamX.txt  ParamY.txt  Planning.yaml  Ros_params.yaml  calibration.txt  camera_info.txt  config.yaml  extrinsics_and_h.yaml  generate_ipm_maps.py  ori_cam.cpp  ost.txt  ost.yaml  solve_extrinsics_and_ipm.py
src/bag_recorder_nodes/: CMakeLists.txt  package.xml
src/bag_recorder_nodes/src/: simple_bag_recorder.cpp
src/control/: CMakeLists.txt  package.xml
src/control/include/control/: Pid_control.hpp  control_node.hpp
src/control/src/: Pid_control.cpp  control_node.cpp
src/custom_msgs/: LanePnt.msg
src/decision/: CMakeLists.txt  package.xml
src/decision/include/decision/: decision_node.hpp
src/decision/src/: decision_node.cpp
src/global/: global.cpp  global.hpp
src/lane_detector_py/: package.xml  setup.py
src/lane_detector_py/lane_detector_py/: binary.py  lane_detector_node.py  sliding_window.py  visualization.py
src/lane_detector_py/launch/: lane_detector.launch.py
src/msg/: CMakeLists.txt  Lane.msg  package.xml
src/perception/: CMakeLists.txt  package.xml
src/perception/include/perception/: CamNode.hpp  perception_node.hpp
src/perception/msg/: Lane.msg
src/perception/src/: CamNode.cpp  MainCam.py  camera.cpp  camera.hpp  perception_node.cpp
src/perception_interfaces/: CMakeLists.txt  package.xml
src/planning/: CMakeLists.txt  package.xml
src/planning/include/planning/: planning_node.hpp
src/planning/src/: planning_node.cpp
src/sea_bringup/: CMakeLists.txt  package.xml
src/sea_bringup/launch/: pipeline.launch.py
src/sea_interfaces/: CMakeLists.txt  package.xml
src/sea_interfaces/msg/: ControlCommand.msg  PerceptionData.msg  PlanningDecision.msg
