<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Perception stage of the SEA-ME autonomous driving stack.</description>
  <maintainer email="todo@example.com">SEA:ME Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sea_interfaces</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sea_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
