<?xml version="1.0"?>
<package format="3">
  <name>sea_bringup</name>
  <version>0.0.1</version>
  <description>Launch files to bring up the SEA-ME autonomous driving stack.</description>
  <maintainer email="todo@example.com">SEA:ME Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>decision</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
